QMM020 Ghép màn A + chỉnh sửa  business màn B C

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/b/index.xhtml
@@ -37,7 +37,7 @@
                                                         { headerText: '', key: 'display', width: 180,formatter: _.escape},
                                                     ],
                                             multiple: false,
-                                            value: currentSelect
+                                            value: currentSelectedHis
                                         }"></table>
                                 </div>
                         </div>
@@ -58,7 +58,7 @@
 
                         <div class="control-group" style="margin-top: 15px;">
                                 <div data-bind="ntsFormLabel: {}">#{i18n.getText('QMM020_20')}</div>
-                                <button style="margin-left: 15px;" data-bind="click: openScreenM">#{i18n.getText('QMM020_21')}</button>
+                                <button style="margin-left: 15px;" data-bind="click: openScreenM1">#{i18n.getText('QMM020_21')}</button>
                                 <span style="margin-left: 20px;" data-bind="text: bonusCode"></span>
                                 <span style="margin-left: 10px;" data-bind="text: bonusLayoutName"></span>
                         </div>
