--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/k/qmm020.k.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/k/qmm020.k.style.css
@@ -6,3 +6,10 @@
 .sidebar-content{
     overflow:inherit !important;
 }
+.ntsRadioBox {
+    margin-bottom: 10px;
+}
+#center {
+    margin: auto;
+    padding: 10px;
+}
