--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/031/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/031/e/index.xhtml
@@ -33,7 +33,7 @@
             <button data-bind="click: execution"
                     tabindex="1" class="proceed">#{i18n.getText('QMM031_31')}</button>
             <!-- E1_3 -->
-            <button data-bind="click: close"
+            <button id="E1_3" data-bind="click: close"
                     tabindex="2">#{i18n.getText('QMM031_32')}</button>
         </div>
     </ui:define>
