--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/b/index.xhtml
@@ -3,7 +3,7 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:com="http://xmlns.jcp.org/jsf/component"
                 xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <div style="margin-top: 20px; min-width: 550px" data-bind = "with: selectedFormula">
+    <div style="min-width: 550px" data-bind = "with: selectedFormula">
         <div style="width: 130px; display: inline-block;"
              data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM017_8')}</div>
         <div style="display: inline-block;"
