--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/c/index.xhtml
@@ -3,9 +3,8 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:com="http://xmlns.jcp.org/jsf/component"
                 xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <div style="margin-top: 20px; min-width: 550px">
+    <div style="min-width: 550px">
         <div class = "tab-row" data-bind="with: selectedFormula">
-
             <div style="width: 130px; display: inline-block;"
                  data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM017_8')}</div>
             <div style="display: inline-block;"
@@ -23,43 +22,93 @@
         <table id = "C2_1">
             <colgroup>
                 <col width="250px" />
-                <col width="120px" />
+                <col width="230px" />
                 <col width="300px" />
             </colgroup>
             <thead>
-                <tr>
+                <tr data-bind = "with: basicCalculationFormulaList()[0]">
                     <th class = "ui-widget-header">
                         <span style="white-space: pre-line">#{i18n.getText('QMM017_30')}</span>
                         </th>
-                    <th></th>
-                    <th></th>
+                    <th>
+                        <div class="cf" tabindex="1" data-bind="ntsSwitchButton: {
+									name: '#[QMM017_36]',
+									options: calculationFormulaFixedFormulaItem,
+									optionsValue: 'value',
+									optionsText: 'name',
+									value: calculationFormulaClassification,
+									required: true }"></div>
+                    </th>
+                    <th>
+                        <div data-bind = "visible: calculationFormulaClassification() == 0">
+                            <input tabindex="2" data-bind="ntsNumberEditor: {
+                                value: basicCalculationFormula,
+                                constraint: 'FixedAmount',
+                                name: '#[QMM017_32]',
+                                option: {
+                                    decimallength: 3
+                                },
+                                required: true}" />
+                        </div>
+                        <div data-bind = "visible: calculationFormulaClassification() == 1">
+                            <button tabindex="3">#{i18n.getText('QMM017_34')}</button>
+                            <div style = "display: inline-block" data-bind = "text: displayFormulaType"></div>
+                        </div>
+                    </th>
                 </tr>
             </thead>
             <tbody></tbody>
         </table>
-        <table id = "C3_1">
-            <colgroup>
-                <col width="250px" />
-                <col width="120px" />
-                <col width="300px" />
-            </colgroup>
-            <thead>
-            <tr>
-                <th class = "ui-widget-header">
-                    UNKNOWN
-                </th>
-                <th colspan="2" class = "ui-widget-header">
-                    <button>#{i18n.getText('QMM017_34')}</button>
-                    <button>#{i18n.getText('QMM017_35')}</button>
-                </th>
-            </tr>
-            </thead>
-            <tbody data-bind="foreach: basicCalculationFormulaList">
-            <tr>
-                <td data-bind="text: masterUseCode"></td>
-                <td data-bind="text: lastName"></td>
-            </tr>
-            </tbody>
-        </table>
+        <div style = "margin-top: 30px;" >
+            <table id = "C3_1">
+                <colgroup>
+                    <col width="250px" />
+                    <col width="230px" />
+                    <col width="300px" />
+                </colgroup>
+                <thead>
+                <tr>
+                    <th class = "ui-widget-header" >
+                        UNKNOWN
+                    </th>
+                    <th colspan="2" class = "ui-widget-header">
+                        <button tabindex="4" data-bind = "click: $vm.setAllFixedValue">#{i18n.getText('QMM017_34')}</button>
+                        <button tabindex="5" data-bind = "click: $vm.setAllCalculationFormula">#{i18n.getText('QMM017_35')}</button>
+                    </th>
+                </tr>
+                </thead>
+                <tbody data-bind="foreach: basicCalculationFormulaList">
+                <tr data-bind = "visible: $index() > 0">
+                    <td data-bind="text: masterUseCode"></td>
+                    <td>
+                        <div class="cf" tabindex="6" data-bind="ntsSwitchButton: {
+									name: '#[QMM017_36]',
+									options: calculationFormulaClassificationItem,
+									optionsValue: 'value',
+									optionsText: 'name',
+									value: calculationFormulaClassification,
+									required: true }"></div>
+                    </td>
+                    <td>
+                        <div data-bind = "visible: calculationFormulaClassification() == 0">
+                            <input tabindex="7" data-bind="ntsNumberEditor: {
+                                value: basicCalculationFormula,
+                                constraint: 'FixedAmount',
+                                name: '#[QMM017_32]',
+                                option: {
+                                    decimallength: 3
+                                },
+                                required: true}" />
+                        </div>
+                        <div data-bind = "visible: calculationFormulaClassification() == 1">
+                            <button tabindex="8">#{i18n.getText('QMM017_34')}</button>
+                            <div style = "display: inline-block" data-bind = "text: displayFormulaType"></div>
+                        </div>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+
     </div>
 </ui:composition>
