--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/b/index.xhtml
@@ -31,7 +31,7 @@
                     <div tabindex="1"
                          id="B1_4"
                          data-bind="ntsDatePicker: {
-                             value: yearMonthStart,
+                             value: startDate,
                              dateFormat: 'yearmonth',
                              required: true,
                              name : '#[QMM041_16]' }"/>
