--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/d/index.xhtml
@@ -1,12 +1,98 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html
-        PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-    <title>Title</title>
-</head>
+<?xml version='1.0' encoding='UTF-8'?>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:com="http://xmlns.jcp.org/jsf/component"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
 <body>
-
+<ui:composition template="../../../../master/dialog.xhtml">
+    <ui:define name="htmlHead">
+        <script>
+            var dialogSize = {width: 535, height: 520};
+        </script>
+        <com:scriptfile set="IGNITE"/>
+        <com:scriptfile path="../share/model.js"/>
+        <com:stylefile path="qmm041.d.style.css"/>
+        <com:scriptfile path="qmm041.d.start.js"/>
+        <com:scriptfile path="qmm041.d.service.js"/>
+        <com:scriptfile path="qmm041.d.vm.js"/>
+    </ui:define>
+    <ui:define name="content">
+        <div id="functions-area">
+            <!--D1_1 閉じる-->
+            <button tabindex="1" id="D1_1" data-bind="click: cancel">
+                #{i18n.getText('QMM041_34')}
+            </button>
+        </div>
+        <div id="contents-area">
+            <div>
+                <div class="row">
+                    <div class="cell label-space">
+                        <!--D2_1 社員コード-->
+                        <div data-bind="ntsFormLabel: {}">#{i18n.getText('QMM041_35')}</div>
+                    </div>
+                    <div class="cell">
+                        <!--D2_2 社員コード-->
+                        <div class="label" data-bind="text: "/>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="cell label-space">
+                        <!--D2_3 社員名-->
+                        <div data-bind="ntsFormLabel: {}">#{i18n.getText('QMM041_36')}</div>
+                    </div>
+                    <div class="cell">
+                        <!--D2_4 社員名-->
+                        <span class="label" data-bind="text: "/>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="cell label-space">
+                        <!--D2_5 基準年月-->
+                        <div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM041_37')}</div>
+                    </div>
+                    <div class="cell">
+                        <!--D2_6 基準年月-->
+                        <div data-bind="ntsDatePicker: {
+                                name: '#[QMM041_38]',
+                                value: referenceYear,
+                                dateFormat: 'yearmonth',
+                                required: true}"
+                             id="D2_6"
+                             tabindex="2"
+                        />
+                        <!--D2_7 抽出-->
+                        <button tabindex="3" id="D2_7" class="caret-bottom" data-bind="click: extract,  enable: $root.errors.isEmpty">
+                            #{i18n.getText('QMM041_4339')}
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div style="margin: 0px 6px">
+                <!--D3_1 金額一覧-->
+                <table data-bind="ntsGridList: {
+                        name: '#[QMM041_40]',
+                        height: 150,
+                        dataSource: items,
+                        rows: 10,
+                        primaryKey: 'code',
+                        columns: [
+                            {key:'empId', length: 0, hidden: true},
+                            {headerText: '#{i18n.getText('QMM041_8')}', key: 'code', width: 70},
+                            {headerText: '#{i18n.getText('QMM041_9')}', key: 'name', width: 120},
+                            {headerText: '#{i18n.getText('QMM041_16')}', key: 'period', width: 160},
+                            {headerText: '#{i18n.getText('QMM041_18')}', key: 'amount', width: 130}
+                        ],
+                        optionsValue: 'code',
+                        optionsText: 'name',
+                        multiple: false,
+                        value: currentCode}"
+                       tabindex="4"
+                       id="gridlist"
+                />
+            </div>
+        </div>
+    </ui:define>
+</ui:composition>
 </body>
 </html>
